--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "watch.anime",
+  "homepage": "https://bladeegenius.github.io/anime_online/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
