--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
+__pycache__/
 
 # Editor directories and files
 .vscode/*
@@ -22,6 +23,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-__pycache__/
+*.pyc
+*.pyo
 
+# Env
 .env
